WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306503
Fix TestWebKitAPI.WebCoreNSURLSessionTest.InvalidateEmpty after
306230@main
https://bugs.webkit.org/show_bug.cgi?id=306503
Summary
Fix TestWebKitAPI.WebCoreNSURLSessionTest.InvalidateEmpty after 306230@main
Alex Christensen
Reported
2026-01-28 22:07:51 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-28 22:07:58 PST
<
rdar://problem/169156687
>
Alex Christensen
Comment 2
2026-01-28 22:09:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57456
EWS
Comment 3
2026-01-28 23:10:14 PST
Committed
306397@main
(c86f1107ddce): <
https://commits.webkit.org/306397@main
> Reviewed commits have been landed. Closing PR #57456 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug