Fix TestWebKitAPI.WebCoreNSURLSessionTest.InvalidateEmpty after 306230@main https://bugs.webkit.org/show_bug.cgi?id=306503 rdar://169156687

Reviewed by Chris Dumez.

The assertIsMainThread is failing in the MediaResourceLoader destructor.
This is what WTF::DestructionThread::Main is for.

* Source/WebCore/loader/MediaResourceLoader.h:

Canonical link: https://commits.webkit.org/306397@main